add width control for now.

--- a/aba.html
+++ b/aba.html
@@ -19,7 +19,8 @@
     myConfig.tags = [
     // 'montreal', 'fireworks','israel',
     'montreal,night','lighthouse'];
-    myConfig.galleryThumbsPerRow = 5;
+//    myConfig.galleryThumbsPerRow = 5;
+    myConfig.galleryWidth = '750px'; //Once auto-size based on thumb is resolved, wont need it
     myConfig.pictureSize = '_b'; //default is normal, _b for big
     </script>
     <script src="flickr-site.js" type="text/javascript" charset="utf-8"></script>
