renaming dev to minimal, since i can forsee having a dev one with borders.

--- a/aba.html
+++ b/aba.html
@@ -4,7 +4,7 @@
         <title></title>
         <script src="http://yui.yahooapis.com/3.1.0pr1/build/yui/yui-min.js"></script>
         <!-- <link rel="stylesheet" href="aba.css" type="text/css" media="screen" title="no title" charset="utf-8"> -->
-        <link rel="stylesheet" href="dev.css" type="text/css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="minimal.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" type="text/css" href="/shadowbox-3.0.2/shadowbox.css">
         <!-- Skin -->
     </head>
